build: upgrade to Bulma v1.0

--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,4 @@
-@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+@use "css/bulma.min";
 
 .field .field.has-addons {
     margin-bottom: 0;
