feat: add highlight.js for code examples

--- a/website/style/main.scss
+++ b/website/style/main.scss
@@ -1,7 +1,12 @@
 @use "leptos-bulma.css";
+@import url("https://unpkg.com/@highlightjs/cdn-assets@11.9.0/styles/github-dark-dimmed.min.css");
 
 main.container {
     min-height: calc(100vh - 275px);
+}
+
+pre {
+    padding: 0;
 }
 
 .navbar-brand img {
