refactor: change build script to generate a SCSS file that allows Bulma variables
* Also remove `indoc` dependency from the website

--- a/website/style/main.scss
+++ b/website/style/main.scss
@@ -1,4 +1,5 @@
-@use "leptos-bulma.css";
+@use "leptos-bulma.scss";
+
 @import url("https://unpkg.com/@highlightjs/cdn-assets@11.9.0/styles/github-dark-dimmed.min.css");
 
 main.container {
